--- a/src/libsvc/Makefile
+++ b/src/libsvc/Makefile
@@ -19,16 +19,16 @@ CFLAGS+=-DOSNAME=$(OSNAME) -DOSREL=$(OSREL) -DOSRELMAJOR=$(OSRELMAJOR)
 
 OBJS_LIBSVC = daemon.o
 				  
-all: ../lib/libsvc.a
+all: ../../lib/libsvc.a
 
-../lib/libsvc.a: $(OBJS_LIBSVC)
+../../lib/libsvc.a: $(OBJS_LIBSVC)
 	@echo "* LINK libsvc.a"
-	@ar cr ../lib/libsvc.a $(OBJS_LIBSVC)
+	@ar cr ../../lib/libsvc.a $(OBJS_LIBSVC)
 
 clean:
-	rm -f *.o ../lib/libsvc.a
+	rm -f *.o ../../lib/libsvc.a
 
 .SUFFIXES: .c .o
 .c.o:
 	@echo "* COMPILE $<"
-	@$(CC) $(CFLAGS) -I../include -c $<
+	@$(CC) $(CFLAGS) -I../../include -c $<
