--- a/src/libopticondb/Makefile
+++ b/src/libopticondb/Makefile
@@ -17,22 +17,18 @@ endif
 
 CFLAGS+=-DOSNAME=$(OSNAME) -DOSREL=$(OSREL) -DOSRELMAJOR=$(OSRELMAJOR)
 
-OBJS_TEST = test/test_roundtrip_encoding.o
-OBJS_LIBOPTICON = aes.o host.o tenant.o \
-				  util.o auth.o base64.o \
-				  ioport.o codec.o \
-				  compress.o defaults.o
+OBJS_LIBOPTICONDB = db.o db_local.o
 				  
-all: ../lib/libopticon.a
+all: ../../lib/libopticondb.a
 
-../lib/libopticon.a: $(OBJS_LIBOPTICON)
-	@echo "* LINK libopticon.a"
-	@ar cr ../lib/libopticon.a $(OBJS_LIBOPTICON)
+../../lib/libopticondb.a: $(OBJS_LIBOPTICONDB)
+	@echo "* LINK libopticondb.a"
+	@ar cr ../../lib/libopticondb.a $(OBJS_LIBOPTICONDB)
 
 clean:
-	rm -f *.o ../lib/libopticon.a
+	rm -f *.o ../../lib/libopticondb.a
 
 .SUFFIXES: .c .o
 .c.o:
 	@echo "* COMPILE $<"
-	@$(CC) $(CFLAGS) -I../include -c $<
+	@$(CC) $(CFLAGS) -I../../include -c $<
