Farm out different codecs to different source files and headers.

--- a/src/libopticon/Makefile
+++ b/src/libopticon/Makefile
@@ -21,6 +21,7 @@ OBJS_TEST = test/test_roundtrip_encoding.o
 OBJS_LIBOPTICON = aes.o host.o tenant.o \
 				  util.o auth.o base64.o \
 				  ioport.o codec.o \
+				  codec_json.o codec_pkt.o \
 				  compress.o defaults.o
 				  
 all: ../../lib/libopticon.a
