--- a/test/Makefile
+++ b/test/Makefile
@@ -17,7 +17,7 @@ endif
 
 CFLAGS+=-DOSNAME=$(OSNAME) -DOSREL=$(OSREL) -DOSRELMAJOR=$(OSRELMAJOR)
 
-all: test_aes test_daemon test_localdb test_roundtrip_encoding test_ioport
+all: test_aes test_daemon test_localdb test_roundtrip_encoding test_ioport test_udp
 
 test_aes: test_aes.o
 	@echo "* LINK test_aes"
@@ -43,6 +43,11 @@ test_roundtrip_encoding: test_roundtrip_encoding.o
 	@echo "* LINK test_roundtrip_encoding"
 	@$(CC) -o test_roundtrip_encoding test_roundtrip_encoding.o \
 		  ../lib/libopticon.a -lz
+
+test_udp: test_udp.o
+	@echo "* LINK test_udp"
+	@$(CC) -o test_udp test_udp.o \
+		  ../lib/libopticon.a ../lib/libsvc.a -lz
 
 clean:
 	rm -f *.o test_roundtrip_encoding
