Run tests as actual tests

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,8 @@
 doc/
 .DS_Store
 *.o
-test/test_roundtrip_encoding
-test/test_ioport
-test/test_aes
-test/test_localdb
-test/test_daemon
-test/test_udp
-test/test_thread
+test/bin/test_*
+test/out/*.*
 test/tmpdb
 test/*.db
 test/*.idx
