Implement opticondb host-add-record

--- a/src/opticon-db/Makefile
+++ b/src/opticon-db/Makefile
@@ -17,7 +17,7 @@ endif
 
 CFLAGS+=-DOSNAME=$(OSNAME) -DOSREL=$(OSREL) -DOSRELMAJOR=$(OSRELMAJOR)
 
-OBJS_OPTICONDB = cmd.o main.o
+OBJS_OPTICONDB = cmd.o import.o main.o
 LIBS = ../../lib/libopticon.a ../../lib/libopticondb.a \
 		../../lib/libsvc.a ../../lib/libopticonf.a
 				  
