Move meterwatch to libopticon proper. Improve logging and add a file-backed logger.

--- a/src/opticon-collector/Makefile
+++ b/src/opticon-collector/Makefile
@@ -17,7 +17,7 @@ endif
 
 CFLAGS+=-DOSNAME=$(OSNAME) -DOSREL=$(OSREL) -DOSRELMAJOR=$(OSRELMAJOR)
 
-OBJS_OPTICONCOLLECTOR = main.o
+OBJS_OPTICONCOLLECTOR = main.o watcher.o
 LIBS = ../../lib/libopticon.a ../../lib/libopticondb.a \
 		../../lib/libsvc.a ../../lib/libopticonf.a
 				  
