--- a/src/libopticon/Makefile
+++ b/src/libopticon/Makefile
@@ -24,7 +24,7 @@ OBJS_LIBOPTICON = aes.o host.o tenant.o \
 				  ioport_buffer.o codec.o \
 				  codec_json.o codec_pkt.o \
 				  compress.o pktwrap.o \
-				  defaults.o
+				  watchlist.o defaults.o
 				  
 all: ../../lib/libopticon.a
 
