Refactor out libopticonf, better cohesion can be achieved if the components are guaranteed to know eachother. Next to go is libsvc. The only library left alone will be libopticondb.

--- a/src/libopticon/Makefile
+++ b/src/libopticon/Makefile
@@ -24,7 +24,8 @@ OBJS_LIBOPTICON = aes.o host.o tenant.o \
 				  ioport_buffer.o codec.o \
 				  codec_json.o codec_pkt.o \
 				  compress.o pktwrap.o \
-				  watchlist.o defaults.o
+				  watchlist.o defaults.o \
+				  dump.o var.o react.o parse.o
 				  
 all: ../../lib/libopticon.a
 
