--- a/src/libopticon/Makefile
+++ b/src/libopticon/Makefile
@@ -25,8 +25,9 @@ OBJS_LIBOPTICON = aes.o host.o tenant.o \
 				  codec_json.o codec_pkt.o \
 				  compress.o pktwrap.o \
 				  watchlist.o defaults.o \
-				  dump.o var.o react.o parse.o
-				  
+				  dump.o var.o react.o parse.o \
+				  cliopt.o daemon.o log.o thread.o transport.o \
+				  transport_udp.o packetqueue.o
 all: ../../lib/libopticon.a
 
 ../../lib/libopticon.a: $(OBJS_LIBOPTICON)
