--- a/src/opticon-agent/Makefile
+++ b/src/opticon-agent/Makefile
@@ -19,8 +19,7 @@ endif
 CFLAGS+=-DOS_$(OSDEF) -DOSNAME=$(OSNAME) -DOSREL=$(OSREL) -DOSRELMAJOR=$(OSRELMAJOR)
 
 OBJS_OPTICONAGENT = main.o probelist.o probes.o resender.o
-LIBS = ../../lib/libopticon.a ../../lib/libopticondb.a \
-		../../lib/libsvc.a ../../lib/libopticonf.a
+LIBS = ../../lib/libopticon.a ../../lib/libopticondb.a 
 				  
 all: ../../bin/opticon-agent
 
