--- a/src/opticon-collector/Makefile
+++ b/src/opticon-collector/Makefile
@@ -18,8 +18,7 @@ endif
 CFLAGS+=-DOSNAME=$(OSNAME) -DOSREL=$(OSREL) -DOSRELMAJOR=$(OSRELMAJOR)
 
 OBJS_OPTICONCOLLECTOR = main.o watcher.o
-LIBS = ../../lib/libopticon.a ../../lib/libopticondb.a \
-		../../lib/libsvc.a ../../lib/libopticonf.a
+LIBS = ../../lib/libopticon.a ../../lib/libopticondb.a
 				  
 all: ../../bin/opticon-collector
 
