--- a/src/opticon-db/Makefile
+++ b/src/opticon-db/Makefile
@@ -18,8 +18,7 @@ endif
 CFLAGS+=-DOSNAME=$(OSNAME) -DOSREL=$(OSREL) -DOSRELMAJOR=$(OSRELMAJOR)
 
 OBJS_OPTICONDB = cmd.o import.o main.o
-LIBS = ../../lib/libopticon.a ../../lib/libopticondb.a \
-		../../lib/libsvc.a ../../lib/libopticonf.a
+LIBS = ../../lib/libopticon.a ../../lib/libopticondb.a
 				  
 all: ../../bin/opticon-db
 
