--- a/src/libopticon/Makefile
+++ b/src/libopticon/Makefile
@@ -19,7 +19,7 @@ CFLAGS+=-DOSNAME=$(OSNAME) -DOSREL=$(OSREL) -DOSRELMAJOR=$(OSRELMAJOR)
 
 OBJS_TEST = test/test_roundtrip_encoding.o
 OBJS_LIBOPTICON = aes.o host.o tenant.o \
-				  util.o auth.o base64.o \
+				  util.o auth.o base64.o import.o \
 				  ioport.o ioport_file.o \
 				  ioport_buffer.o codec.o \
 				  codec_json.o codec_pkt.o \
