Add data structure for keeping track of watch trigger adjustments at the host level

--- a/src/libopticon/Makefile
+++ b/src/libopticon/Makefile
@@ -18,7 +18,7 @@ endif
 CFLAGS+=-DOSNAME=$(OSNAME) -DOSREL=$(OSREL) -DOSRELMAJOR=$(OSRELMAJOR)
 
 OBJS_TEST = test/test_roundtrip_encoding.o
-OBJS_LIBOPTICON = aes.o host.o tenant.o \
+OBJS_LIBOPTICON = adjust.o aes.o host.o tenant.o \
 				  util.o auth.o base64.o import.o \
 				  ioport.o ioport_file.o \
 				  ioport_buffer.o codec.o \
