--- a/src/opticon-api/Makefile
+++ b/src/opticon-api/Makefile
@@ -15,7 +15,7 @@ LIBS = ../../lib/libopticon.a ../../lib/libopticondb.a
 
 ifeq (darwin,$(OSNAME))
   CFLAGS+=-I/usr/local/include -I/opt/local/include
-  LIBS+=/usr/local/lib/libmicrohttpd.a /opt/local/lib/libcurl.a
+  LIBS+=/usr/local/lib/libmicrohttpd.a /usr/local/lib/libcurl.a
 endif
 
 CFLAGS+=-DOSNAME=$(OSNAME) -DOSREL=$(OSREL) -DOSRELMAJOR=$(OSRELMAJOR)
