Add a libhttp, farm out curl wrapping over there, so opticon-api and opticon-cli may share

--- a/src/opticon-api/Makefile
+++ b/src/opticon-api/Makefile
@@ -11,7 +11,7 @@ ifeq (freebsd,$(OSNAME))
   LDFLAGS+=-lkvm
 endif
 
-LIBS = ../../lib/libopticon.a ../../lib/libopticondb.a 
+LIBS = ../../lib/libopticon.a ../../lib/libopticondb.a ../../lib/libhttp.a
 
 ifeq (darwin,$(OSNAME))
   CFLAGS+=-I/usr/local/include 
