opticon-cli: If no tokens are provided, log in to keystone, cache token. opticon-api: Instead of forbidding tenant-listings, restrict non-admin users to their own set.

--- a/src/opticon-cli/Makefile
+++ b/src/opticon-cli/Makefile
@@ -24,7 +24,7 @@ endif
 
 CFLAGS+=-DOSNAME=$(OSNAME) -DOSREL=$(OSREL) -DOSRELMAJOR=$(OSRELMAJOR)
 
-OBJS_OPTICONCLI = cmd.o import.o main.o
+OBJS_OPTICONCLI = cmd.o import.o main.o api.o
 				  
 all: ../../bin/opticon
 
