--- a/src/opticon-cli/Makefile
+++ b/src/opticon-cli/Makefile
@@ -22,7 +22,7 @@ endif
 
 CFLAGS+=-DOSNAME=$(OSNAME) -DOSREL=$(OSREL) -DOSRELMAJOR=$(OSRELMAJOR)
 
-OBJS_OPTICONCLI = cmd.o import.o main.o api.o
+OBJS_OPTICONCLI = cmd.o main.o api.o
 				  
 all: ../../bin/opticon
 
