--- a/src/opticon-api/Makefile
+++ b/src/opticon-api/Makefile
@@ -11,7 +11,7 @@ ifeq (freebsd,$(OSNAME))
   LDFLAGS+=-lkvm
 endif
 
-LIBS = ../../lib/libopticon.a ../../lib/libopticondb.a ../../lib/libhttp.a
+LIBS = ../../lib/libopticondb.a ../../lib/libhttp.a ../../lib/libopticon.a 
 LIBCURL = -lcurl
 
 ifeq (darwin,$(OSNAME))
@@ -21,7 +21,7 @@ endif
 
 ifeq (linux,$(OSNAME))
   CFLAGS+=-std=c99 -D_GNU_SOURCE
-  LDFLAGS+=-lpthread -lm
+  LDFLAGS+=-lpthread -lm -lmicrohttpd
 endif
 
 CFLAGS+=-DOSNAME=$(OSNAME) -DOSREL=$(OSREL) -DOSRELMAJOR=$(OSRELMAJOR)
