--- a/src/opticon-collector/Makefile
+++ b/src/opticon-collector/Makefile
@@ -23,7 +23,7 @@ endif
 CFLAGS+=-DOSNAME=$(OSNAME) -DOSREL=$(OSREL) -DOSRELMAJOR=$(OSRELMAJOR)
 
 OBJS_OPTICONCOLLECTOR = main.o watcher.o
-LIBS = ../../lib/libopticon.a ../../lib/libopticondb.a
+LIBS = ../../lib/libopticondb.a ../../lib/libopticon.a 
 				  
 all: ../../bin/opticon-collector
 
