Refactor parse functions to be closer to var proper.

--- a/src/libopticon/Makefile
+++ b/src/libopticon/Makefile
@@ -29,7 +29,7 @@ OBJS_LIBOPTICON = adjust.o aes.o host.o tenant.o \
 				  codec_json.o codec_pkt.o \
 				  compress.o pktwrap.o \
 				  watchlist.o defaults.o \
-				  dump.o var.o react.o parse.o \
+				  dump.o var.o react.o var_parse.o \
 				  cliopt.o daemon.o log.o thread.o transport.o \
 				  transport_udp.o packetqueue.o \
 				  defaultmeters.o uuid.o hash.o
