--- a/src/opticon-agent/Makefile
+++ b/src/opticon-agent/Makefile
@@ -23,7 +23,7 @@ endif
 
 CFLAGS+=-DOS_$(OSDEF) -DOSNAME=$(OSNAME) -DOSREL=$(OSREL) -DOSRELMAJOR=$(OSRELMAJOR)
 
-OBJS_OPTICONAGENT = main.o probelist.o probes.o resender.o tproc.o
+OBJS_OPTICONAGENT = main.o probelist.o probes.o resender.o tproc.o wordlist.o
 LIBS = ../../lib/libopticon.a ../../lib/libopticondb.a 
 				  
 all: ../../bin/opticon-agent
