build lib with $(LPTHREAD), even though a .a shouldn't care about dynamic linking, but debian/ubuntu.

--- a/src/libopticon/Makefile
+++ b/src/libopticon/Makefile
@@ -38,7 +38,7 @@ all: ../../lib/libopticon.a
 
 ../../lib/libopticon.a: $(OBJS_LIBOPTICON)
 	@echo "[LINK ] libopticon.a"
-	@ar cr ../../lib/libopticon.a $(OBJS_LIBOPTICON)
+	@ar cr ../../lib/libopticon.a $(OBJS_LIBOPTICON) $(LPTHREAD)
 
 clean:
 	rm -f *.o ../../lib/libopticon.a
