--- a/src/libopticon/Makefile
+++ b/src/libopticon/Makefile
@@ -33,7 +33,7 @@ OBJS_LIBOPTICON = adjust.o aes.o host.o tenant.o \
 				  cliopt.o daemon.o log.o thread.o transport.o \
 				  transport_udp.o packetqueue.o \
 				  defaultmeters.o uuid.o hash.o \
-				  summary.o
+				  summary.o notify.o
 all: ../../lib/libopticon.a
 
 ../../lib/libopticon.a: $(OBJS_LIBOPTICON)
